# linearboost-classifier

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  LinearBoost.py  README.md  SECURITY.md  SEFRMulticlass.py  SefrBinary.py  Test-2.py  TestSEFR.py  TestSEFRBinary - Final - Report.py  TestSEFRBinary - Final.py  TestSEFRBinary.py  TestSEFRMulticlass - Final - Report.py  TestSEFRMulticlass - Final.py  TestSEFRMulticlass.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: demo_linearboost_usage.ipynb  optuna_sefrboost_demo.ipynb
src/linearboost/: __init__.py  _utils.py  linear_boost.py  sefr.py  sefr_boost.py
tests/: _utils.py  test_linearboost.py  test_sefr.py
